<resources>
    <string name="app_name">Triple Tap</string>
    <string name="app_label">Triple Tap</string>

    <!-- Main Menu -->
    <string name="menu_title">Triple Tap</string>
    <string name="menu_single_player">Single Player</string>
    <string name="menu_multi_player">Multiplayer</string>
    <string name="menu_how_to_play">How to Play</string>
    <string name="menu_leaderboard">Leaderboard</string>
    <string name="menu_achievements">Achievements</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_back">Back</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="leaderboards_not_available">Leaderboards are unavailable unless you are signed into Google Play Games.</string>
    <string name="achievements_not_available">Achievements are unavailable unless you are signed into Google Play Games.</string>

    <!-- Multiplayer Menu -->
    <string name="menu_two_players">Two Players</string>
    <string name="menu_three_players">Three Players</string>
    <string name="menu_four_players">Four Players</string>

    <!-- Single Player Menu -->
    <string name="menu_normal">Normal</string>
    <string name="menu_time_attack">Time Attack</string>
    <string name="menu_practice">Practice</string>

    <!-- Game -->
    <string name="message_game_over">Game over!</string>
    <string name="button_hint">Hint</string>
    <string name="button_hint_unlimited">Hint (&#8734;)</string>
    <string name="debug_refresh_board">Refresh</string>
    <string name="debug_end_game">End Game</string>

    <!-- Multiplayer Buttons -->
    <string name="button_player_one">Player 1</string>
    <string name="button_player_two">Player 2</string>
    <string name="button_player_three">Player 3</string>
    <string name="button_player_four">Player 4</string>
    <string name="button_claim_set">TAP A TRIPLE!</string>
    <string name="button_found_set">TRIPLE!</string>
    <string name="button_out_of_time">TOO LATE!</string>
    <string name="button_not_a_set">NOT A SET!</string>
    <string name="button_wait">WAITING</string>
    <string name="score_initial">Score: 0</string>
    <string name="score_prefix">Score: %d</string>

    <!-- Game Over Screen -->
    <string name="game_over">GAME OVER</string>
    <string name="button_restart">New Game</string>
    <string name="button_leaderboard">Leaderboard</string>
    <string name="button_view_sets">View Sets</string>
    <string name="button_main_menu">Main Menu</string>

    <!-- Time Attack Game -->
    <string name="time_attack_score">0</string>

    <!-- Normal Game -->
    <string name="normal_deck_remaining">81</string>

    <!-- Pause Menu -->
    <string name="pause_resume">RESUME</string>

    <!-- Extra string constants -->
    <string name="extra_num_players">EXTRA_NUM_PLAYERS</string>
    <string name="extra_time_attack_length">EXTRA_TIME_ATTACK_LENGTH</string>
    <string name="extra_game_mode">EXTRA_GAME_MODE</string>
    <string name="extra_difficulty">EXTRA_DIFFICULTY</string>

    <!-- Extra Constant Values -->
    <string name="value_mode_normal">CLASSIC</string>
    <string name="value_mode_time_attack">TIME_ATTACK</string>
    <string name="value_difficulty_easy">EASY</string>
    <string name="value_difficulty_normal">NORMAL</string>

    <!-- Google Play Services -->
    <string name="signin_other_error">There was an issue signing in. Please try again later.</string>

    <!-- Leaderboard Widget -->
    <string name="widget_title">Classic</string>
    <string name="widget_empty">No scores yet!</string>

    <!-- Bundle Keys -->
    <string name="bundle_key_game">saved_game</string>
    <string name="bundle_key_checked_positions">checked_positions</string>
    <string name="bundle_key_checked_count">checked_count</string>
    <string name="bundle_key_elapsed_millis">elapsed_millis</string>
    <string name="bundle_key_timer_length">timer_length</string>
    <string name="bundle_key_ta_score">ta_score</string>
    <string name="bundle_key_recycler_state">recycler_state</string>

    <!-- Tutorial -->
    <string name="tutorial_done_text">PRACTICE</string>
    <string name="tutorial_header_1">Welcome to Triple Tap!</string>
    <string name="tutorial_text_1">In <i>Triple Tap</i> players race to find 3 cards on the board that make a <i>TRIPLE</i>. Each card has 4 distinct features&#8230;</string>
    <string name="tutorial_header_2">Shape</string>
    <string name="tutorial_text_2"><i>EMERALD</i>, <i>PEAR</i>, or <i>DIAMOND</i></string>
    <string name="tutorial_header_3">Color</string>
    <string name="tutorial_text_3"><i>RED</i>, <i>BLACK</i>, or <i>BLUE</i></string>
    <string name="tutorial_header_4">Count</string>
    <string name="tutorial_text_4"><i>ONE</i>, <i>TWO</i>, or <i>THREE</i></string>
    <string name="tutorial_header_5">Fill</string>
    <string name="tutorial_text_5"><i>SOLID</i>, <i>STRIPE</i>, or <i>OPEN</i></string>
    <string name="tutorial_header_6">What is a <i>TRIPLE</i>?</string>
    <string name="tutorial_text_6">A <i>TRIPLE</i> is a set of 3 cards where all 4 features are either the \n <i>SAME</i> or <i>DIFFERENT</i> \n (All the cards shown so far have been valid <i>TRIPLE</i>s)</string>
    <string name="tutorial_header_7">This is a <i>TRIPLE</i></string>
    <string name="tutorial_text_7">Shape: <i>SAME</i>\nColor: <i>SAME</i>\nCount: <i>DIFFERENT</i>\nFill: <i>DIFFERENT</i></string>
    <string name="tutorial_header_8">This is also a <i>TRIPLE</i></string>
    <string name="tutorial_text_8">Shape: <i>DIFFERENT</i>\nColor: <i>DIFFERENT</i>\nCount: <i>SAME</i>\nFill: <i>DIFFERENT</i></string>
    <string name="tutorial_header_9">Even this is a <i>TRIPLE</i></string>
    <string name="tutorial_text_9">Shape: <i>DIFFERENT</i>\nColor: <i>DIFFERENT</i>\nCount: <i>DIFFERENT</i>\nFill: <i>DIFFERENT</i></string>
    <string name="tutorial_header_10">What isn\'t a <i>TRIPLE</i>?</string>
    <string name="tutorial_text_10">Shape: <i>SAME</i>\nColor: <i>DIFFERENT</i>\nCount: <i>SAME</i>\nFill: <b><i>NEITHER</i></b>\nIf any one of these features is <b><i>NEITHER</i></b>, then it isn\'t a <i>TRIPLE</i>. The cards above aren\'t a <i>TRIPLE</i> because there are only 2 cards that are <i>SOLID</i>.</string>
    <string name="tutorial_header_11">Tips</string>
    <string name="tutorial_text_11">For any 2 cards, there is only 1 card that completes the <i>TRIPLE</i>. What card completes this <i>TRIPLE</i>?</string>
    <string name="tutorial_hint_11">\?</string>
    <string name="tutorial_header_12">Tips</string>
    <string name="tutorial_text_12">You\'re right! It has to be <i>DIAMOND</i>, <i>BLUE</i>, <i>TWO</i>, <i>OPEN</i>.</string>
    <string name="tutorial_header_13">That\'s it!</string>
    <string name="tutorial_text_13">You\'re ready to play <i>Triple Tap</i>! Don\'t forget to take advantage of Practice Mode with <b>no timer</b> and <b>unlimited hints</b>. See you on the leaderboards!</string>

    <!-- Shared Preferences -->
    <string name="pref_previously_started">previously_started</string>

</resources>
