<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_single_player"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:text="@string/menu_single_player" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_multi_player"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:text="@string/menu_multi_player" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_how_to_play"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:text="@string/menu_how_to_play" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_leaderboard"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:text="@string/menu_leaderboard" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_settings"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:text="@string/menu_settings" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_exit"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:text="@string/menu_exit" />

</LinearLayout>
