<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_two_players"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:text="@string/menu_two_players" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_three_players"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:text="@string/menu_three_players" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_four_players"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:text="@string/menu_four_players" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_back"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:text="@string/menu_back" />

</LinearLayout>