<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/PauseDialogStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <info.hoang8f.widget.FButton
        android:id="@+id/button_resume"
        style="@style/FlatButtonStyle"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:text="@string/pause_resume"
        android:textColor="@color/primary_text_inverse"
        app:buttonColor="@color/fbutton_color_turquoise"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:shadowColor="@color/fbutton_color_green_sea"
        app:shadowHeight="@dimen/button_shadow_height"
        tools:text="RESUME" />

    <info.hoang8f.widget.FButton
        android:id="@+id/button_restart"
        style="@style/FlatButtonStyle"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/button_restart"
        android:textColor="@color/primary_text_inverse"
        app:buttonColor="@color/fbutton_color_silver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_main_menu"
        app:layout_constraintTop_toBottomOf="@id/button_resume"
        app:shadowColor="@color/fbutton_color_concrete"
        app:shadowHeight="@dimen/button_shadow_height"
        tools:text="NEW GAME" />

    <com.shakeup.setofthree.customviews.FImageButton
        android:id="@+id/button_main_menu"
        style="@style/FlatButtonStyle"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/menu_leaderboard"
        android:src="@drawable/ic_menu_white_48dp"
        app:buttonColor="@color/fbutton_color_silver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/button_leaderboard"
        app:layout_constraintRight_toRightOf="parent"
        app:shadowColor="@color/fbutton_color_concrete"
        app:shadowHeight="@dimen/button_shadow_height" />
</android.support.constraint.ConstraintLayout>